@@ -1,3 +1,9 @@
+2012-08-27 Riccardo Mottola <rm@gnu.org>
+
+	* GRText.m
+	* GRTextEditorView.m
+	Fix memory leaks.
+
 2012-08-19 Riccardo Mottola <rm@gnu.org>
 
 	* GRDocView.m
@@ -29,7 +35,7 @@
 	* GRBezierPath.m
 	* Graphos.h
 	New file format, colors RGB encoded/decoded.
-	
+
 2012-08-14 Riccardo Mottola <rm@gnu.org>
 
 	* GRBox.m
@@ -43,7 +49,7 @@
 
 	* GRPropsEditor.m
 	More robust handling of nil properties.
-	
+
 2012-04-21 Riccardo Mottola <rm@gnu.org>
 
 	* GRDocView.m
